fix(swaync): use my preferred highlight colour

--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -6,8 +6,8 @@
 @define-color noti-bg #2E3440;
 @define-color noti-bg-alt #383E4A;
 @define-color noti-fg #E5E9F0;
-@define-color noti-bg-focus #81A1C1;
-@define-color noti-bg-hover #A3BE8C;
+@define-color noti-bg-focus #B48EAD;
+@define-color noti-bg-hover #B48EAD;
 @define-color noti-close-bg rgba(255, 255, 255, 0.1);
 @define-color noti-close-bg-hover rgba(255, 255, 255, 0.15);
 @define-color noti-urgent #BF616A;
